--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"name": "timecron",
-	"username": "admin",
-	"email": "xnkyn@qq.com",
+	"name": "UniTimecron",
+	"username": "UniTimecron",
+	"email": "LIghtJUNction.me@gmail.com",
 	"password": "21232f297a57a5a743894a0e4a801fc3",
 	"task": [
 		{
